--- a/themes/grapefruit/layouts/_default/baseof.html
+++ b/themes/grapefruit/layouts/_default/baseof.html
@@ -3,9 +3,11 @@
     {{- partial "head.html" . -}}
     <body>
         {{- partial "header.html" . -}}
-        <div id="content">
-        {{- block "main" . }}{{- end }}
+        <div class="wrapper" id="content">
+        {{- block "main" . }}
+        {{- end }}
         </div>
+        {{/*  {{- partial "tutorial.html" . -}}   */}}
         {{- partial "footer.html" . -}}
     </body>
 </html>
