--- a/themes/grapefruit/assets/scss/partials/base.scss
+++ b/themes/grapefruit/assets/scss/partials/base.scss
@@ -6,7 +6,7 @@ body {
     //Reset
     margin: 0;
     // Style
-    font-family: "Roboto";
+    font-family: 'Rubik', sans-serif;
     color: $black;
     background-image: linear-gradient( 180deg, rgb(33, 33, 51) 10%, rgb(18, 18, 31) 100%);
 }
