--- a/themes/grapefruit/layouts/partials/head.html
+++ b/themes/grapefruit/layouts/partials/head.html
@@ -19,6 +19,12 @@
     {{/* Font Awesome */}}
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
         crossorigin="anonymous">
+    
+    {{/* Google Font */}}
+    <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+    
+    {{/*  Animate CSS  */}}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
     {{/* Glide CSS */}}
     <link rel="stylesheet" href="css/glide.core.css">
