--- a/themes/grapefruit/assets/scss/main.scss
+++ b/themes/grapefruit/assets/scss/main.scss
@@ -3,6 +3,8 @@
 @import "components/buttons.scss";
 
 @import "partials/base.scss";
+@import "partials/single.scss";
+
 @import "partials/glide.scss";
 @import "partials/header.scss";
 @import "partials/footer.scss";
