--- a/themes/grapefruit/layouts/partials/glide.html
+++ b/themes/grapefruit/layouts/partials/glide.html
@@ -3,12 +3,14 @@
         <ul class="glide__slides">
             {{ range first 5 (where .Pages.ByPublishDate "Section" "cards") }}
             <li class="glide__slide">
-                <img class="glide__slide--img" src="https://images.unsplash.com/photo-1543376395-adafdf11d3dd?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d62a5caf40711a37e8496b6c15d621d4&auto=format&fit=crop&w=1834&q=80">
+                    {{ with .Params.feature_image }}
+                <img class="glide__slide--img" src="{{ . | urlize }}">
+                {{ end }}
                 <div class="glide__slide--body">
                     <h3>{{ .Title }}</h3>
                     <p>{{ .Content | truncate 500 }}</p>
                     <div class="glide__slide--footer">
-                        <a class="glide__btn" href="">Lire la suite <i class="fas fa-arrow-right ml-2"></i></a>
+                        <a class="glide__btn" href="{{.Permalink}}">Lire la suite <i class="fas fa-arrow-right ml-2"></i></a>
                     </div>
                 </div>
             </li>
