--- a/themes/grapefruit/layouts/partials/header.html
+++ b/themes/grapefruit/layouts/partials/header.html
@@ -1,10 +1,10 @@
 <header>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="#">
-                <img class="mr-2" src="img/logo-responsive.svg" alt="" height="40px" width="40px">
+            <a class="navbar-brand" href="{{ .Site.BaseURL }}">
+                <img class="mr-2" src="{{ .Site.BaseURL }}img/logo-responsive.svg" alt="" height="40px" width="40px">
                 <span class="logo-divider">X</span>
-                <img class="ml-2" src="img/logo-shareconnection.svg" alt="" height="50px" width="50px">
+                <img class="ml-2" src="{{ .Site.BaseURL }}img/logo-shareconnection.svg" alt="" height="50px" width="50px">
             </a>
         </nav>
     </div>
